# trump_data

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md
.github/ISSUE_TEMPLATE/: data-issue.md  feature_request.md  report-a-doge-sighting.md
.github/actions/: eo_scraper.yml
.github/workflows/: eo_lawsuits_update.yml  golf_dates.yml
.hooks/: modernization_events.sh  pre-commit-it-modernization
exec_order_lawsuits/: Pipfile  README.md  exec_order_lawsuits.json  jt_sample_page.html  pyproject.toml  scrape_eo_lawsuits.py  test_scrape_eo_lawsuits.py
gitmo_camp/: README.md  githmo_camp.csv  gitmo_camp.csv
home_visits/: README.md  golf_dates.csv  home_visits.csv  scrape_golf.py
it_modernization/: CHANGELOG.md  README.md  agencies.yaml  agencies_chart.md  agency_comprehensive.yaml  aliases.yaml  cases.yaml  dump_events.py  dump_people.py  events.csv  events.yaml  mermaid-test.md  modernization.yaml  modernization_schema.json  people.yaml  postings.yaml  roundups.yaml  source_info.yaml  staffing_chart.md  system_postings.yaml  systems.yaml
it_modernization/data/: agencies.yaml  cases.yaml  events.yaml  roundups.yaml  systems.yaml
it_modernization/db/: models.py  sqlite_schema.sql
it_modernization/raw_data/: agencies.yaml  aliases.yaml  cases.yaml  details.yaml  events.yaml  events_agencies.csv  onboard_docs.yaml  people.yaml  roundups.yaml  systems.yaml  terms.yaml
it_modernization/reports/: agency_comprehensive.yaml
it_modernization/schemas/: agencies-file.json  agency.json  alias.json  case.json  (+23 more)
unemployment_claims/: README.md  weekly_claims.csv
(+56 files in other folders)
